--- a/Amazon Reviews Web Scrapper.ipynb
+++ b/Amazon Reviews Web Scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5004,12 +5004,12 @@
     }
    ],
    "source": [
-    "print(soup.prettify())"
+    "print(soup.prettify())#To see the html content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5018,10 +5018,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 167,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5029,7 +5027,7 @@
        "<span class=\"a-profile-name\">Anurag</span>"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5042,7 +5040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -5051,7 +5049,7 @@
        "10"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5062,7 +5060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5102,7 +5100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5111,58 +5109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/RCEEIEU0VZML6?ASIN=1491962291\">\n",
-       " <span>A perfect book for ML Scikit and Tensorflow</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R1W10HCTRD4H18?ASIN=1491962291\">\n",
-       " <span>Okay, okay types</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R387P6NLRIHC2R?ASIN=1491962291\">\n",
-       " <span>Greatly written. Quite hands on and not intimidating</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R286CU3GU5GAU0?ASIN=1491962291\">\n",
-       " <span>Poor printing</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R1DBSX5LO1A80G?ASIN=1491962291\">\n",
-       " <span>Great book for practical ML frameworks in Python</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/REYGNFGXB2RZI?ASIN=1491962291\">\n",
-       " <span>Basics of Python, Refression basics</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R2I7FRVRR25CJ4?ASIN=1491962291\">\n",
-       " <span>Black and white xerox quality. Worthless for 3309</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R1FF69YLBAPVYC?ASIN=1491962291\">\n",
-       " <span>Formula printing mistakes.</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R5AVCP12OVMCM?ASIN=1491962291\">\n",
-       " <span>Book condition very poor</span>\n",
-       " </a>,\n",
-       " <a class=\"a-size-base a-link-normal review-title a-color-base review-title-content a-text-bold\" data-hook=\"review-title\" href=\"/gp/customer-reviews/R28QMFIDLXKMH2?ASIN=1491962291\">\n",
-       " <span>The best book for getting started!</span>\n",
-       " </a>]"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5173,7 +5120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -5191,7 +5138,7 @@
        " '\\nThe best book for getting started!\\n']"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5202,7 +5149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5212,7 +5159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -5230,7 +5177,7 @@
        " 'The best book for getting started!']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5241,7 +5188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5250,7 +5197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 178,
    "metadata": {
     "scrolled": true
    },
@@ -5261,7 +5208,7 @@
        "<i class=\"a-icon a-icon-star a-star-3 review-rating\" data-hook=\"review-star-rating-view-point\"><span class=\"a-icon-alt\">3.0 out of 5 stars</span></i>"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5273,7 +5220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -5282,7 +5229,7 @@
        "10"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5293,7 +5240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5304,7 +5251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -5322,7 +5269,7 @@
        " '5.0 out of 5 stars']"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5333,7 +5280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5424,7 +5371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5435,7 +5382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5444,7 +5391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5484,7 +5431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -5493,7 +5440,7 @@
        "10"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5504,41 +5451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Hands-On Machine Learning with Scikit-Learn and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems\\n\\nThis is one of the best books you can get for someone who is just starting out in ML, in its libraries such as Tensorflow, It covers the basics very good. As a book, it is 5/5Once you are done with this book, the ideal next step is the \"Deep Learning Book By Ian Goodfellow\".Sadly my copy didn\\'t look so good, If it were an under 300 book, I would have let it slide but when the book costs 1450 (Which it is totally worth it) I expected a much better copy.',\n",
-       " '  Example/code presented in the book is not compatible with latest release of the tensorflow. Reader will have to make the program work after lot of debugging and searching on net, hence can be sometimes very frustrating. Started with few chapters, but had to leave it in the middle because of this issue. But serves as a good starting point in terms of theoretical aspects on neural networks (cnn, rnn).At the same time I was unable to find a book dedicated on deep learning with tensorflow. Not a bad book at all, but incompatible with latest version of tensorflow. Can be used as a reference for learning/ understanding cnns, rnn etc.',\n",
-       " '  Quick glance shows that subject covered is done with just the right amount of focus on basics vs hands-on ML.Quite simply written and not intimidating at all. For those looking for a very deep look into the basics and the math background of the concepts should probably check out Duke University’s machine learning mastery with excel - which is a rigorous crash course on the very basics of the math.The problem with book quality on amazon is hit or miss. Paper that it’s published on is slightly cheap quality.Looks like also someone has used the book. That may be a concern to some people.',\n",
-       " '  Poor publication for Indians. Graphs are printed in Black and White making it quire hard to make observations. Packing was poor as well. Not worthy of Rs. 1500. Try to get the original one and one which is published by SPD. Really very disappointed.',\n",
-       " '  This book is probably the best introduction for Machine Learning frameworks for some looking to apply it in their daily work or just as a hobby. Its not an academic textbook at all as focus on proofs and theory is left for exploration. Its  mostly a guided tour with important things to remember about each ML algorithm.The addition of exercises at the end of each chapter is a welcome feature as it really tests your understanding. If you are familiar with Python then this is probably the first ML book to learn. Good luck!NOTE ON INDIAN EDITION: The printing quality is abysmal and really disappointing. Color printing would have been very useful as most of the charts are comparisons and would help in visualizing tuning of hyperparameters etc. Get the US edition if you can spare the change.',\n",
-       " '  Tha book is all what one needs to be confident to pursue analytics journey.Having spent years in the analytics industry, I find the book good for a person with some elementary know how of Machine learning like regression, Decision Trees.Part 1 of the book is good for beginners to make their knowledge concrete on the basiscs of Machine learning algos.Part 2 is more advanced stuff and talks about Neural nets ( different types) and dee learning.One gets to do analysis on datasets with codes , to get the right feel of an analytics project.A good book for anyone looking to get ahead..',\n",
-       " \"  This is a black and white print. Looks very much like a photocopy/xerox. The images shown on the website does not match what I received - different barcode at the back of the book. On the O'REILLY website, this ISBN number is a color print. I bought this assuming it is the original color print imported from O'REILLY, USA. (To really appreciate the graphics,charts,graphs,plots, etc, you need to view in color). But this book does not look like original. Paying Rs. 3309 is worthless for this black and white print. You get SPD publication of the same book for Indian continent for Rs 1400.\",\n",
-       " '  The book has printing mistakes where basic linear equation was printed wrongly.. Also print is below the standards with black and white graphical images. Very dangerous to buy for ML enthusiasts.. Better buy the orginal copy..in the image I uploaded the theta 0 is not used in the formula..',\n",
-       " \"  Got this book delivered today.The book's outer condition was very poor, it was already torn and damaged at the corners. Also had wrinkles on cover and was bent...it feels like myabe it was either used before or not maintained/delivered properly.The page quality however was nice and the printed text and images were readable.Overall not satisfied with the quality of the book as I paid 1475 rupees, so a customer expects at least a decent product for such a high priced book.Will return this as soon as possible.\",\n",
-       " \"  The book is really great for beginners! Although if you want go really into details of ML's maths then you might wanna skip it otherwise it's a really good book for practical use!\"]"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "customer_name\n",
-    "review_title\n",
-    "ratings\n",
-    "content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5547,7 +5460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5559,7 +5472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -5690,7 +5603,7 @@
        "9  5.0 out of 5 stars    The book is really great for beginners! Alth...  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5701,7 +5614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
